# backend/src/auth/dto/auth-response.dto.ts
@@ -4,11 +4,17 @@ export class AuthResponseDto {
   @ApiProperty({ example: 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9...' })
   access_token: string;
 
+  @ApiProperty({ example: 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9...' })
+  refresh_token: string;
+
   @ApiProperty({ example: 'bearer' })
   token_type: string;
 
-  @ApiProperty({ example: 3600 })
+  @ApiProperty({ example: 900 })
   expires_in: number;
+
+  @ApiProperty({ example: 604800 })
+  refresh_expires_in: number;
 
   @ApiProperty({
     example: {
